Lab1/Assignment/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> calc
Rule 1     calc -> SENTENCE
Rule 2     calc -> empty
Rule 3     SENTENCE -> NOUN VERB
Rule 4     NOUN -> ARTICLE noun
Rule 5     NOUN -> ADJECTIVE noun
Rule 6     NOUN -> ARTICLE ADJECTIVE noun
Rule 7     NOUN -> noun
Rule 8     ARTICLE -> article
Rule 9     VERB -> NOUN VERB
Rule 10    VERB -> VERBC VERB
Rule 11    VERB -> verb
Rule 12    VERB -> VERBC
Rule 13    VERBC -> verbca verbcb
Rule 14    ADJECTIVE -> adj
Rule 15    empty -> <empty>

Terminals, with rules where they appear

adj                  : 14
article              : 8
error                : 
noun                 : 4 5 6 7
verb                 : 11
verbca               : 13
verbcb               : 13

Nonterminals, with rules where they appear

ADJECTIVE            : 5 6
ARTICLE              : 4 6
NOUN                 : 3 9
SENTENCE             : 1
VERB                 : 3 9 10
VERBC                : 10 12
calc                 : 0
empty                : 2

Parsing method: LALR

state 0

    (0) S' -> . calc
    (1) calc -> . SENTENCE
    (2) calc -> . empty
    (3) SENTENCE -> . NOUN VERB
    (15) empty -> .
    (4) NOUN -> . ARTICLE noun
    (5) NOUN -> . ADJECTIVE noun
    (6) NOUN -> . ARTICLE ADJECTIVE noun
    (7) NOUN -> . noun
    (8) ARTICLE -> . article
    (14) ADJECTIVE -> . adj

    $end            reduce using rule 15 (empty -> .)
    noun            shift and go to state 6
    article         shift and go to state 8
    adj             shift and go to state 9

    calc                           shift and go to state 1
    SENTENCE                       shift and go to state 2
    empty                          shift and go to state 3
    NOUN                           shift and go to state 4
    ARTICLE                        shift and go to state 5
    ADJECTIVE                      shift and go to state 7

state 1

    (0) S' -> calc .



state 2

    (1) calc -> SENTENCE .

    $end            reduce using rule 1 (calc -> SENTENCE .)


state 3

    (2) calc -> empty .

    $end            reduce using rule 2 (calc -> empty .)


state 4

    (3) SENTENCE -> NOUN . VERB
    (9) VERB -> . NOUN VERB
    (10) VERB -> . VERBC VERB
    (11) VERB -> . verb
    (12) VERB -> . VERBC
    (4) NOUN -> . ARTICLE noun
    (5) NOUN -> . ADJECTIVE noun
    (6) NOUN -> . ARTICLE ADJECTIVE noun
    (7) NOUN -> . noun
    (13) VERBC -> . verbca verbcb
    (8) ARTICLE -> . article
    (14) ADJECTIVE -> . adj

    verb            shift and go to state 13
    noun            shift and go to state 6
    verbca          shift and go to state 14
    article         shift and go to state 8
    adj             shift and go to state 9

    NOUN                           shift and go to state 10
    VERB                           shift and go to state 11
    VERBC                          shift and go to state 12
    ARTICLE                        shift and go to state 5
    ADJECTIVE                      shift and go to state 7

state 5

    (4) NOUN -> ARTICLE . noun
    (6) NOUN -> ARTICLE . ADJECTIVE noun
    (14) ADJECTIVE -> . adj

    noun            shift and go to state 15
    adj             shift and go to state 9

    ADJECTIVE                      shift and go to state 16

state 6

    (7) NOUN -> noun .

    verb            reduce using rule 7 (NOUN -> noun .)
    noun            reduce using rule 7 (NOUN -> noun .)
    verbca          reduce using rule 7 (NOUN -> noun .)
    article         reduce using rule 7 (NOUN -> noun .)
    adj             reduce using rule 7 (NOUN -> noun .)


state 7

    (5) NOUN -> ADJECTIVE . noun

    noun            shift and go to state 17


state 8

    (8) ARTICLE -> article .

    noun            reduce using rule 8 (ARTICLE -> article .)
    adj             reduce using rule 8 (ARTICLE -> article .)


state 9

    (14) ADJECTIVE -> adj .

    noun            reduce using rule 14 (ADJECTIVE -> adj .)


state 10

    (9) VERB -> NOUN . VERB
    (9) VERB -> . NOUN VERB
    (10) VERB -> . VERBC VERB
    (11) VERB -> . verb
    (12) VERB -> . VERBC
    (4) NOUN -> . ARTICLE noun
    (5) NOUN -> . ADJECTIVE noun
    (6) NOUN -> . ARTICLE ADJECTIVE noun
    (7) NOUN -> . noun
    (13) VERBC -> . verbca verbcb
    (8) ARTICLE -> . article
    (14) ADJECTIVE -> . adj

    verb            shift and go to state 13
    noun            shift and go to state 6
    verbca          shift and go to state 14
    article         shift and go to state 8
    adj             shift and go to state 9

    NOUN                           shift and go to state 10
    VERB                           shift and go to state 18
    VERBC                          shift and go to state 12
    ARTICLE                        shift and go to state 5
    ADJECTIVE                      shift and go to state 7

state 11

    (3) SENTENCE -> NOUN VERB .

    $end            reduce using rule 3 (SENTENCE -> NOUN VERB .)


state 12

    (10) VERB -> VERBC . VERB
    (12) VERB -> VERBC .
    (9) VERB -> . NOUN VERB
    (10) VERB -> . VERBC VERB
    (11) VERB -> . verb
    (12) VERB -> . VERBC
    (4) NOUN -> . ARTICLE noun
    (5) NOUN -> . ADJECTIVE noun
    (6) NOUN -> . ARTICLE ADJECTIVE noun
    (7) NOUN -> . noun
    (13) VERBC -> . verbca verbcb
    (8) ARTICLE -> . article
    (14) ADJECTIVE -> . adj

    $end            reduce using rule 12 (VERB -> VERBC .)
    verb            shift and go to state 13
    noun            shift and go to state 6
    verbca          shift and go to state 14
    article         shift and go to state 8
    adj             shift and go to state 9

    VERBC                          shift and go to state 12
    VERB                           shift and go to state 19
    NOUN                           shift and go to state 10
    ARTICLE                        shift and go to state 5
    ADJECTIVE                      shift and go to state 7

state 13

    (11) VERB -> verb .

    $end            reduce using rule 11 (VERB -> verb .)


state 14

    (13) VERBC -> verbca . verbcb

    verbcb          shift and go to state 20


state 15

    (4) NOUN -> ARTICLE noun .

    verb            reduce using rule 4 (NOUN -> ARTICLE noun .)
    noun            reduce using rule 4 (NOUN -> ARTICLE noun .)
    verbca          reduce using rule 4 (NOUN -> ARTICLE noun .)
    article         reduce using rule 4 (NOUN -> ARTICLE noun .)
    adj             reduce using rule 4 (NOUN -> ARTICLE noun .)


state 16

    (6) NOUN -> ARTICLE ADJECTIVE . noun

    noun            shift and go to state 21


state 17

    (5) NOUN -> ADJECTIVE noun .

    verb            reduce using rule 5 (NOUN -> ADJECTIVE noun .)
    noun            reduce using rule 5 (NOUN -> ADJECTIVE noun .)
    verbca          reduce using rule 5 (NOUN -> ADJECTIVE noun .)
    article         reduce using rule 5 (NOUN -> ADJECTIVE noun .)
    adj             reduce using rule 5 (NOUN -> ADJECTIVE noun .)


state 18

    (9) VERB -> NOUN VERB .

    $end            reduce using rule 9 (VERB -> NOUN VERB .)


state 19

    (10) VERB -> VERBC VERB .

    $end            reduce using rule 10 (VERB -> VERBC VERB .)


state 20

    (13) VERBC -> verbca verbcb .

    verb            reduce using rule 13 (VERBC -> verbca verbcb .)
    noun            reduce using rule 13 (VERBC -> verbca verbcb .)
    verbca          reduce using rule 13 (VERBC -> verbca verbcb .)
    article         reduce using rule 13 (VERBC -> verbca verbcb .)
    adj             reduce using rule 13 (VERBC -> verbca verbcb .)
    $end            reduce using rule 13 (VERBC -> verbca verbcb .)


state 21

    (6) NOUN -> ARTICLE ADJECTIVE noun .

    verb            reduce using rule 6 (NOUN -> ARTICLE ADJECTIVE noun .)
    noun            reduce using rule 6 (NOUN -> ARTICLE ADJECTIVE noun .)
    verbca          reduce using rule 6 (NOUN -> ARTICLE ADJECTIVE noun .)
    article         reduce using rule 6 (NOUN -> ARTICLE ADJECTIVE noun .)
    adj             reduce using rule 6 (NOUN -> ARTICLE ADJECTIVE noun .)

